This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
2/26/20: Increased camera timeout for continuous mode images to allow long
exposure times (In 3.7).

2/3/20: SEM_3-8-0beta8
2/3/20: Fixed image shift changes when changing mag with "Apply image shift
offsets" or "Center shift on tilt axis" selected, broken 6/6/19.

2/3/20: Fixed wild defocus changes when doing reset image shift at non-zero
tilt, broken 8/21/19.

2/3/20: SEM_3-7-13
2/3/20: Fixed ReportLensFLCStatus output (In 3.7).

2/3/20: Allowed quoted strings to be read from a file with ReadLineToArray.

1/29/20: Added camera property to apply the minimum binning available for
direct detectors to other cameras.

1/23/20: Fixed New2DArray to not require a size.

1/23/20: Made it possible for to acquire every successive frame in continuous
mode without waiting for exposure time to elapse when using WaitForNextFrame.

1/23/20: Added option to add multiple Record hole and position to frame file
name.

1/10/20: Updated Navigator coordinates in montage piece when a point is moved
(In 3.7).

1/8/20: Fixed RawElectronStats to give raw dose rate instead of linearized one
from DM (In 3.7).

12/27/19: Added script commands to: make a script read-only below a certain
point unless in administrator mode; look for files whose paths and names match
a specified pattern; run scripts from files whose names match a pattern; allow
strings to be enclosed in single quotes; do an image shift equivalent to a
specified stage shift.  Also added multiline commenting delimited by /* and
*/.  Eliminated Scripts - Save All menu item.

12/27/19: If Navigator registration number is changed during an acquire, it
now continues to acquire at the new registration.

12/24/19: Made scripts be saved in a separate file from settings, so that