@@ -1110,7 +1110,8 @@
           the controls for aligning, saving, or both.&nbsp; For the older Fn16 cameras, if 
           burst mode is available, you can make these features available by adding this 
           property with a value of 3.&nbsp; 
-        </LI>
+          Burst mode is well supported for a firmware version of at least 5.02 and may 
+          work for a firmware version between 2.36 and 5.02.</LI>
         <LI>
           Fast continuous mode using the Tietz live mode 
           is enabled by default for all of these CMOS cameras and can be disabled with the
